syntax = "proto3";

package booking.v1;

service BookingService {

}
